# powerplant-coding-challenge

./: Dockerfile  README.md  pyproject.toml
challenge_explanation/: README.md
src/powerplant_challenge/: main.py
src/powerplant_challenge/api/api_v1/: api.py
src/powerplant_challenge/api/api_v1/endpoints/: productionplan.py
src/powerplant_challenge/core/: config.py
src/powerplant_challenge/schemas/: __init__.py  powerplant.py  productionplan.py
src/powerplant_challenge/tests/: conftest.py
src/powerplant_challenge/tests/api/: test_productionplan.py
src/powerplant_challenge/tests/example_payloads/: response1.json  response2.json
