[tool.poetry]
name = "powerplant-challenge"
version = "0.1.0"
description = ""
authors = ["daverck <serckdavid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "<2.0.0"
pytest = "^8.2.0"
fastapi = "^0.111.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
